2008-07-21  Uwe Kindler  <uwe_kindler@web.de>

	* src/lpc2xxx_misc.c: Added hal_lpc_can_init() to initialize CAN
	channels
	* cdl/hal_arm_lpc24xx.cdl: Added a number of CYGHWR_HAL_ARM_LPC2XXX_xxx
	options for device driver compatibility reasons. Some LPC2xxx device
	drivers rely on these definitions. Moved some configuration options
	to make configuration more intuitive in configuration tool. Added
	CYGNUM_HAL_ARM_LPC2XXX_CAN_CLK option for configuration of CAN 
	peripheral clock.
	* include/var_io.h: Added macro CYGARC_HAL_LPC24XX_SET_PIN_FUN()
	* src/lpc2xxx_misc.c: Added function hal_lpc_set_pclk() to set
	peripheral clocks easily. Initialize peripheral clocks in
	hal_hardware_init() according to configuration.
	
2008-07-06  Uwe Kindler  <uwe_kindler@web.de>

	* Initial release of LPC24xx variant support (based on LPX2xxx variant)
	* src/hal_diag.c: 
	* src/lpc2xxx_misc.c: 
	* include/plf_stub.h: 
	* include/var_io.h: 
	* include/var_arch.h: 
	* include/hal_var_ints.h: 
	* include/hal_diag.h: 
	* include/hal_cache.h: 
	* cdl/hal_arm_lpc24xx.cdl: New port - based on LPX2xxx variant.
	
//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
// Copyright (C) 2004 eCosCentric Limited 
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//
// You should have received a copy of the GNU General Public License along